# compiler-design

./: .gitignore  README.md
LLVM Assignment/: main.cpp  string.ll
Lexer/: CMakeCache.txt  CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp  symbols.cpp  symbols.hpp  token.cpp  token.hpp
My Compiler/: CMakeLists.txt  Input.txt  codegen.cpp  codegen.hpp  decl.hpp  expr.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  scope.hpp  semantics.hpp  stmt.hpp  symbols.hpp  token.hpp  type.hpp
